@@ -1,85 +1,64 @@
 package ru.skypro.homework.mapper;
 
-import org.springframework.stereotype.Component;
+import org.mapstruct.*;
 import ru.skypro.homework.dto.AdDto;
 import ru.skypro.homework.dto.CreateOrUpdateAdDto;
 import ru.skypro.homework.dto.ExtendedAdDto;
 import ru.skypro.homework.entity.AdEntity;
 import ru.skypro.homework.entity.ImageEntity;
 
+import java.time.LocalDateTime;
+import java.time.ZoneOffset;
+import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 
-@Component
-public class AdMapper {
+@Mapper(componentModel = "spring")
+public interface AdMapper {
 
-    public AdDto toAdDto(AdEntity entity) {
-        if (entity == null) {
-            return null;
-        }
-        return AdDto.builder()
-                .author(entity.getAuthor().getId())
-                .image(getImageUrls(entity.getImages()))
-                .pk(entity.getId())
-                .price(entity.getPrice())
-                .title(entity.getTitle())
-                .build();
-    }
+    @Mapping(target = "author", source = "author.id")
+    @Mapping(target = "image", source = "images", qualifiedByName = "imagesToUrls")
+    @Mapping(target = "pk", source = "id")
+    AdDto toAdDto(AdEntity entity);
 
-    public ExtendedAdDto toExtendedAdDto(AdEntity entity) {
-        if (entity == null) {
-            return null;
-        }
-        return ExtendedAdDto.builder()
-                .pk(entity.getId())
-                .authorFirstName(entity.getAuthor().getFirstName())
-                .authorLastName(entity.getAuthor().getLastName())
-                .description(entity.getDescription())
-                .email(entity.getAuthor().getEmail())
-                .image(getImageUrls(entity.getImages()))
-                .phone(entity.getAuthor().getPhone())
-                .price(entity.getPrice())
-                .title(entity.getTitle())
-                .build();
-    }
+    @Mapping(target = "pk", source = "id")
+    @Mapping(target = "authorFirstName", source = "author.firstName")
+    @Mapping(target = "authorLastName", source = "author.lastName")
+    @Mapping(target = "email", source = "author.email")
+    @Mapping(target = "phone", source = "author.phone")
+    @Mapping(target = "image", source = "images", qualifiedByName = "imagesToUrls")
+    ExtendedAdDto toExtendedAdDto(AdEntity entity);
 
+    @Mapping(target = "id", ignore = true)
+    @Mapping(target = "author", ignore = true)
+    @Mapping(target = "createdAt", ignore = true)
+    @Mapping(target = "comments", ignore = true)
+    @Mapping(target = "images", ignore = true)
+    AdEntity toEntity(CreateOrUpdateAdDto dto);
 
-    public AdEntity toEntity(CreateOrUpdateAdDto dto) {
-        if (dto == null) {
-            return null;
-        }
-        return AdEntity.builder()
-                .title(dto.getTitle())
-                .price(dto.getPrice())
-                .description(dto.getDescription())
-                .build();
-    }
+    @Mapping(target = "id", ignore = true)
+    @Mapping(target = "author", ignore = true)
+    @Mapping(target = "createdAt", ignore = true)
+    @Mapping(target = "comments", ignore = true)
+    @Mapping(target = "images", ignore = true)
+    @BeanMapping(nullValuePropertyMappingStrategy = NullValuePropertyMappingStrategy.IGNORE)
+    void updateEntity(@MappingTarget AdEntity entity, CreateOrUpdateAdDto dto);
 
-
-    public void updateEntity(AdEntity entity, CreateOrUpdateAdDto dto) {
-        if (entity == null || dto == null) {
-            return;
-        }
-        entity.setTitle(dto.getTitle());
-        entity.setPrice(dto.getPrice());
-        entity.setDescription(dto.getDescription());
-    }
-
-    public List<AdDto> toAdDtoList(List<AdEntity> entities) {
-        if (entities == null) {
-            return List.of();
-        }
-        return entities.stream()
+    default List<AdDto> toAdDtoList(List<AdEntity> entities) {
+        return Optional.ofNullable(entities)
+                .orElse(Collections.emptyList())
+                .stream()
                 .map(this::toAdDto)
                 .collect(Collectors.toList());
     }
 
-    private List<String> getImageUrls(List<ImageEntity> images) {
-        if (images == null || images.isEmpty()) {
-            return List.of();
-        }
-        return images.stream()
+    @Named("imagesToUrls")
+    default List<String> imagesToUrls(List<ImageEntity> images) {
+        return Optional.ofNullable(images)
+                .orElse(Collections.emptyList())
+                .stream()
                 .map(img -> "/images/" + img.getId())
                 .collect(Collectors.toList());
     }
