@@ -1,62 +1,60 @@
 package ru.skypro.homework.mapper;
 
-import org.springframework.stereotype.Component;
+import org.mapstruct.*;
 import ru.skypro.homework.dto.CommentDto;
 import ru.skypro.homework.dto.CreateOrUpdateCommentDto;
 import ru.skypro.homework.entity.CommentEntity;
 
+import java.time.LocalDateTime;
+import java.time.ZoneOffset;
+import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 
-@Component
-public class CommentMapper {
+@Mapper(componentModel = "spring")
+public interface CommentMapper {
 
+    @Mapping(target = "author", source = "author.id")
+    @Mapping(target = "authorImage", source = "author.image", qualifiedByName = "imageToUrl")
+    @Mapping(target = "authorFirstName", source = "author.firstName")
+    @Mapping(target = "pk", source = "id")
+    @Mapping(target = "createdAt", source = "createdAt", qualifiedByName = "localDateTimeToLong")
+    CommentDto toDto(CommentEntity entity);
 
-    public CommentDto toDto(CommentEntity entity) {
-        if (entity == null) {
-            return null;
-        }
-        String authorImage = entity.getAuthor().getImage() != null
-                ? "/images/" + entity.getAuthor().getImage().getId()
-                : null;
+    @Mapping(target = "id", ignore = true)
+    @Mapping(target = "ad", ignore = true)
+    @Mapping(target = "author", ignore = true)
+    @Mapping(target = "createdAt", ignore = true)
+    CommentEntity toEntity(CreateOrUpdateCommentDto dto);
 
-        return CommentDto.builder()
-                .author(entity.getAuthor().getId())
-                .authorImage(authorImage)
-                .authorFirstName(entity.getAuthor().getFirstName())
-                .createdAt(entity.getCreatedAt())
-                .pk(entity.getId())
-                .text(entity.getText())
-                .build();
-    }
+    @Mapping(target = "id", ignore = true)
+    @Mapping(target = "ad", ignore = true)
+    @Mapping(target = "author", ignore = true)
+    @Mapping(target = "createdAt", ignore = true)
+    @BeanMapping(nullValuePropertyMappingStrategy = NullValuePropertyMappingStrategy.IGNORE)
+    void updateEntity(@MappingTarget CommentEntity entity, CreateOrUpdateCommentDto dto);
 
-
-    public CommentEntity toEntity(CreateOrUpdateCommentDto dto) {
-        if (dto == null) {
-            return null;
-        }
-        return CommentEntity.builder()
-                .text(dto.getText())
-                .createdAt(System.currentTimeMillis())
-                .build();
-    }
-
-
-    public void updateEntity(CommentEntity entity, CreateOrUpdateCommentDto dto) {
-        if (entity == null || dto == null) {
-            return;
-        }
-        entity.setText(dto.getText());
-    }
-
-
-    public List<CommentDto> toDtoList(List<CommentEntity> entities) {
-        if (entities == null) {
-            return List.of();
-        }
-        return entities.stream()
+    default List<CommentDto> toDtoList(List<CommentEntity> entities) {
+        return Optional.ofNullable(entities)
+                .orElse(Collections.emptyList())
+                .stream()
                 .map(this::toDto)
                 .collect(Collectors.toList());
+    }
+
+    @Named("imageToUrl")
+    default String imageToUrl(ru.skypro.homework.entity.ImageEntity image) {
+        return Optional.ofNullable(image)
+                .map(img -> "/images/" + img.getId())
+                .orElse(null);
+    }
+
+    @Named("localDateTimeToLong")
+    default Long localDateTimeToLong(LocalDateTime dateTime) {
+        return Optional.ofNullable(dateTime)
+                .map(dt -> dt.toInstant(ZoneOffset.UTC).toEpochMilli())
+                .orElse(null);
     }
 }
